--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,15 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore except config files which has samples
+/config/dalli.yml
+/config/database.yml
+/config/redis.yml
+/config/secrets.yml
+/config/msd_api.yml
+
+/Procfile
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -14,3 +23,4 @@
 !/tmp/.keep
 
 .byebug_history
+
