--- a/config/redis.yml.sample
+++ b/config/redis.yml.sample
@@ -1,8 +1,12 @@
 default: &default
-  namespace: msd_api
   host: localhost
   port: 6379
-  db: 2
+  db: 1
+
+  namespace: msd_api
+  count_namespace: count
+  color_namespace: color
+  recent_namespace: recent
 
 development:
   <<: *default
